2010-02-16  Vladimir Serbinenko  <phcoder@gmail.com>

	Remove any reference to non-free fonts.

	* commands/videotest.c (grub_cmd_videotest): Use unifont by default.
	* docs/gfxmenu-theme-example.txt: Removed. It's both outdated and
	uses non-free components.
	* font/font.c (grub_font_get_name): Remove example name.
	* gfxmenu/gui_label.c (grub_gui_label_new): Use unifont by default.
	* gfxmenu/gui_list.c (grub_gui_list_new): Likewise.
	* gfxmenu/gui_progress_bar.c (grub_gui_progress_bar_new): Likewise.
	* gfxmenu/view.c (grub_gfxmenu_view_new): Likewise.

2010-02-16  Georgy Buranov <gburanov@gmail.com>

	* disk/efi/efidisk.c (grub_efidisk_get_device_name): Fix a typo.

2010-02-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* term/serial.c (serial_get_divisor) [GRUB_MACHINE_MIPS_YEELOONG]:
	Double divisor.
	(serial_hw_init) [GRUB_MACHINE_MIPS_YEELOONG]: Don't enable advanced
	features.
	(GRUB_MOD_INIT) [GRUB_MACHINE_MIPS_YEELOONG]: Default to 115200.

2010-02-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* gensymlist.sh.in: Use TARGET_CC instead of CC.

2010-02-14  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* commands/i386/pc/play.c (GRUB_MOD_INIT(play)): Fix help.
	* docs/grub.texi (Command-line and menu entry commands): Document play
	command.

2010-02-14  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* commands/i386/pc/play.c (grub_cmd_play): If grub_file_open fails,
	parse arguments as inline tempo and notes.  Move code for playing notes
	to...
	(play): ... new function.

2010-02-14  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* commands/i386/pc/play.c (T_REST, T_FINE, struct note, beep_on): Use
	grub_uint16_t instead of short.
	(grub_cmd_play): Use grub_uint32_t instead of int, convert data from
	disk from little endian to cpu endianness.

2010-02-07  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* commands/i386/pc/play.c (BASE_TEMPO): Set to 60 *
	GRUB_TICKS_PER_SECOND instead of 120.

2010-02-14  Vladimir Serbinenko  <phcoder@gmail.com>