@@ -222,7 +222,8 @@ export GRUB_DEFAULT \
   GRUB_GFXMODE \
   GRUB_THEME \
   GRUB_GFXPAYLOAD_LINUX \
-  GRUB_DISABLE_OS_PROBER
+  GRUB_DISABLE_OS_PROBER \
+  GRUB_INIT_TUNE
 
 if test "x${grub_cfg}" != "x"; then
   rm -f ${grub_cfg}.new
